--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 </head>
 <body data-gr-c-s-loaded="true">
 <div id="article">
-<h1>Our site is getting a little tune up and some love.</h1>
+    <center><h1>NOTRE SITE EN MAINTENANCE, MERCI POUR VOTRE VISITE .</h1></center>
 <div>
-<p>We apologize for the inconvenience, but we're performing some maintenance. You can still contact us at <a href="mailto:">email@domain.com</a>. We'll be back up soon!</p>
+<p>Nous vous prions de nous excuser pour la gêne occasionnée, mais nous effectuons des travaux de maintenance. Vous pouvez toujours nous contacter au <a href="mailto:">email@domain.com</a>. We'll be back up soon!</p>
 <p>— Business Name</p>
 </div>
 </div>
