--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Performing Maintenance</title>
 <meta name="description" content="Performing maintenance...">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
+ <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     
 <style type="text/css">
     /* Reset */
@@ -64,11 +65,15 @@
 </head>
 <body data-gr-c-s-loaded="true">
 <div id="article">
-    <center><h1>NOTRE SITE EN MAINTENANCE, MERCI POUR VOTRE VISITE .</h1></center>
-<div>
-<p>Nous vous prions de nous excuser pour la gêne occasionnée, mais nous effectuons des travaux de maintenance. Vous pouvez toujours nous contacter au <a href="mailto:">email@domain.com</a>. We'll be back up soon!</p>
-<p>— Business Name</p>
-</div>
+	<h1 class="nl_open-sans">Planned Upgrade Today</h1>
+	<img src="https://myprovidence.healthtrioconnect.com/asset/maintenance.png">
+	<p>This tool is temporarily unavailable due to a planned upgrade.
+	  <br />
+	  <br />
+  We expect to be finished with maintenance by midnight (Pacific time), Saturday night. 
+  <br />
+	  <br />
+	  We apologize for any inconvenience.</p>
 </div>
 <script data-cfasync="false" src="./Performing Maintenance_files/email-decode.min.js"></script>
 </body></html>
